# prefixload

./: .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  README_RU.md  release.yml
.github/workflows/: release.yml
assets/: config.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  login.rs  run.rs  schedule.rs
src/clients/: s3.rs
src/commands/: config.rs  login.rs  mod.rs  run.rs  schedule.rs
src/crypto/: etag.rs
