[package]
name = "prefixload"
version = "0.4.0"
edition = "2024"
description = "S3 cli backuper"
license = "MIT"
repository = "https://github.com/b4rgut/prefixload"
readme = "README.md"
keywords = ["S3", "backup", "aws"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Aleksey Kalsin <aleksey@kalsin.pro>"]

[dependencies]
aws-sdk-s3 = "1.96.0"
clap = { version = "4.5.40", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["password"] }
dirs-next = "2.0.0"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
