[package]
name = "prefixload"
version = "0.9.0"
edition = "2024"
description = "S3 cli backup by file name prefix"
license = "MIT"
repository = "https://github.com/b4rgut/prefixload"
readme = "README.md"
keywords = ["S3", "backup", "aws"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Aleksey Kalsin <aleksey@kalsin.pro>"]

[profile.dev]
opt-level = 0 # No optimization for fast compile times
debug = true  # Include debug symbols

[profile.release]
opt-level = 3 # Maximum optimization for performance
debug = false # Exclude debug symbols for smaller binary size
lto = true    # Link-Time Optimization for further size reduction

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
aws-config = "1.8.2"
aws-sdk-s3 = "1.98.0"
aws-types = "1.3.7"
clap = { version = "4.5.41", features = ["derive"] }
dirs-next = "2.0.0"
requestty = "0.5.0"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = "5.2.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
wiremock = "0.6.4"
